--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -56,12 +56,22 @@ table th {
   
 }
 .search-color{
-  border-color: #ff00007f !important;
-  color: #ff00007f !important;
+  border-color: #ff00007f ;
+  color: #ff00007f ;
 background-color: #171717;
 }
 @media (min-width:768px){
   .larg-m{
 margin-right: 150px;
 }
+}
+
+
+@media (min-width:768px){
+  img.carouselImg{
+    max-width:40%; /* Ensure the image doesn't overflow its container */
+    height: auto;    /* Maintain the aspect ratio */
+    display: block;
+  
+  }
 }
